# tenspec

./: .gitignore  Cargo.toml  README.md  cli.yml  example.sh
script/: script-after-ext.geo  script-before-ext.geo  tenspec-ext.geo
src/: cli.yml  lib.rs  main.rs
